--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,215 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XyNfOE"><img src="https://m.media-amazon.com/images/I/619D-55pwHL._SR400,400_.jpg" alt="Sport Wireless Bluetooth" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>166 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XyNfOE">Upgraded 2019 True Waterproof Sport Wireless Bluetooth Earbuds- with Deep Bass HiFi 3D Stereo Sound>..</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>60S5SXPA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XyNfOE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwUWK0"><img src="https://m.media-amazon.com/images/I/61cPjFTu76L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>20 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwUWK0">Wireless Earbuds, True Wireless Bluetooth Headphones, TWS Earphones with Charging Case 15H Playtime 3D Stereo...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$41.99</span></address>
+      <p><span>Take <strong>60% off at $41.99</strong> with promo code: <strong>60XEX9DZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwUWK0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="25.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JpWQDT"><img src="https://m.media-amazon.com/images/I/71ZMS7ahHwL._SR400,400_.jpg" alt="Dearlove Women's Oversized Long Sleeve" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>82 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JpWQDT">Dearlove Women's Oversized Long Sleeve Open Front Knit Cardigan Sweater with Pocket S-XXL</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.19</span><span class="ori_price">$35.99</span></address>
+      <p><span>Take <strong>30% off at $35.99</strong> with promo code: <strong>30PHNISY</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 08, 2019 at 06:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JpWQDT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="31" data-price="11.03">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jn1xOz"><img src="https://m.media-amazon.com/images/I/71UyJKxOefL._SR400,400_.jpg" alt="Lightning Cable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>154 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jn1xOz">Lightning Cable,[MFi Certified] Fantany Durable Metal USB Lightning Charging Cable Compatible with iPhone Xs,XS Max,XR,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.03</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>31% off at $15.99</strong> with promo code: <strong>31FANTANY</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jn1xOz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="6.04">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xx4XXL"><img src="https://m.media-amazon.com/images/I/81ntFFhwo8L._SR400,400_.jpg" alt="Car Phone Holder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>640 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xx4XXL">Car Phone Holder, Veckle CD Slot Magnetic Phone Car Mount Holder Strong Magnet Phone Holder for Car Universal...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.04</span><span class="ori_price">$10.99</span>
+         <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+         <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>45% off at $10.99</strong> with promo code: <strong>45OUH9LW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xx4XXL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwHFMU"><img src="https://m.media-amazon.com/images/I/51MAx75NvUL._SR400,400_.jpg" alt="AUTLEY Wireless Vertical Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>145 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwHFMU">AUTLEY Wireless Vertical Mouse, 2.4G Optical Wireless Silent Ergonomic Mouse for Large Hands, for Laptop,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$20.99</span>
+         <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $20.99</strong> with promo code: <strong>40S1DS1D</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwHFMU">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="38.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XB8i30"><img src="https://m.media-amazon.com/images/I/61q5ORCrcbL._SR400,400_.jpg" alt="LETSCOM USB C Hub" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>201 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XB8i30">LETSCOM USB C Hub, 11 in 1 USB C Adapter with Ethernet, 4K HDMI, VGA, Power Delivery, 2 USB3.0 &USB2.0,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$38.49</span><span class="ori_price">$54.99</span></address>
+      <p><span>Take <strong>30% off at $54.99</strong> with promo code: <strong>30MSRU1H</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XB8i30">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="18.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2G5oqUO"><img src="https://m.media-amazon.com/images/I/71bs2jGchNL._SR400,400_.jpg" alt="Modoker Small Travel Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>90 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2G5oqUO">Modoker Small Travel Backpack, Vintage Laptop Backpack Bag School College Bookbag USB Charging Port ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.19</span><span class="ori_price">$25.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $25.99</strong> with promo code: <strong>3047TK7H</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2G5oqUO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="26.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XuYDjs"><img src="https://m.media-amazon.com/images/I/61GrkoF-qtL._SR400,400_.jpg" alt="Mcscants iPad 9.7 Keyboard Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>16 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XuYDjs">Mcscants iPad 9.7 Keyboard Case for iPad 2018 6th Gen / 2017 5th Gen/iPad Pro 9.7 / iPad Air 2 & 1,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.39</span><span class="ori_price">$43.99</span></address>
+      <p><span>Take <strong>40% off at $43.99</strong> with promo code: <strong>40656F7G</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XuYDjs">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xDG11i"><img src="https://m.media-amazon.com/images/I/61MHpIewjvL._SR400,400_.jpg" alt="7PCS Pimple Popper Tool" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>44 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xDG11i">7PCS Pimple Popper Tool, Blackhead Remover Comedone Extractor Kit </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>70% off at $14.99</strong> with promo code: <strong>30FBHZQ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xDG11i">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="12.79">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LQ9Fcf"><img src="https://m.media-amazon.com/images/I/717y8vI2OxL._SR400,400_.jpg" alt="Christian T Shirts" /></a>
