--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -90,10 +90,10 @@
                     <h1 class="movie-card__title">Amazon Prime Day 2019</h1>
                     <!-- <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4> -->
                   </div>
-                  <p class="movie-card__desc">Prime Day 2019 is a two-day parade of epic deals, starting July 15 at 12am through July 16. Prime Day is an annual celebration with awesome deals and exciting product launches, plus live entertainment and more, exclusively for Prime members.</p>
+                  <p class="movie-card__desc">Prime Day 2019 is a two-day parade of epic deals, starting July 15 at 12am through July 16. Prime Day is an annual celebration with awesome deals and exciting product launches, plus live entertainment and more, exclusively for Prime members.  &emsp;- Amazon.com -</p>
                   <a target="_blank" class="try_prime" href="https://amzn.to/2YcWjd1">"Try Free 30-day Trial"</a>
                   <!-- <button class="btn btn-outline movie-card__button" type="button">Watch Trailer</button> -->
-                  <a class="btn btn-outline movie-card__button" target="_blank" href="https://amzn.to/2LJ977V">Get Prime-Day Deals</a>
+                  <a class="btn btn-outline movie-card__button" target="_blank" href="https://amzn.to/2LJ977V">Get Prime-Day Early Deals</a>
                 </div>
               </div>
             </div>
