--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -47,7 +47,7 @@
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XyNfOE">Use Code at Amazon</a></div>
 </div>
 
-<div class="card clearfix" data-score="60" data-price="discounted_price">
+<div class="card clearfix" data-score="60" data-price="16.8">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XwUWK0"><img src="https://m.media-amazon.com/images/I/61cPjFTu76L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
     <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>20 Amazon Reviews</p></div>
@@ -57,7 +57,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XwUWK0">Wireless Earbuds, True Wireless Bluetooth Headphones, TWS Earphones with Charging Case 15H Playtime 3D Stereo...</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$41.99</span></address>
+      <address><span class="dis_price">$16.8</span><span class="ori_price">$41.99</span></address>
       <p><span>Take <strong>60% off at $41.99</strong> with promo code: <strong>60XEX9DZ</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 08, 2019 at 11:59 PM PDT</span>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
