--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -24,13 +24,13 @@
   </div>
   <div class="image">
     <span>May.26</span>
-    <a href="/blogs/blog_03"><img src="https://i.pinimg.com/originals/88/2c/af/882caf108ae1d284da8e4d1c639dfaa8.png" alt="Memorial Day Deals" /></a>
+    <a href="/blogs/blog_03_memorialday"><img src="https://i.pinimg.com/originals/88/2c/af/882caf108ae1d284da8e4d1c639dfaa8.png" alt="Memorial Day Deals" /></a>
   </div>
   <div class="inner">
-    <h3><a href="/blogs/blog_03">The best Memorial Day sales guide 2019</a></h3>
+    <h3><a href="/blogs/blog_03_memorialday">The best Memorial Day sales guide 2019</a></h3>
     <p>Memorial Day is one of the biggest holidays for big sales. Each year, retail stores offer massive discounts on mattresses, appliances and much more.</p>
     <div class="more_btn">
-      <a href="/blogs/blog_03">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+      <a href="/blogs/blog_03_memorialday">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
     </div>
   </div>
 </div>
@@ -42,13 +42,13 @@
   </div>
   <div class="image">
     <span>May.12</span>
-    <a href="/blogs/blog_02"><img src="https://i.pinimg.com/originals/c6/bd/44/c6bd44ece66bc64f97a8a634ad3f1bd3.png" alt="Amazon Prime" /></a>
+    <a href="/blogs/blog_02_amz_trial"><img src="https://i.pinimg.com/originals/c6/bd/44/c6bd44ece66bc64f97a8a634ad3f1bd3.png" alt="Amazon Prime" /></a>
   </div>
   <div class="inner">
-    <h3><a href="/blogs/blog_02">How to sign up & cancel Amazon Prime free 30-day trial</a></h3>
+    <h3><a href="/blogs/blog_02_amz_trial">How to sign up & cancel Amazon Prime free 30-day trial</a></h3>
     <p>Do you have account of Amaozn? If you have it, you could sign up for Amazon Prime and it's as easy as signing up your account in the first place.But if you’re new to Amazon, don’t worry, just follow the step-by-step instructions.</p>
     <div class="more_btn">
-      <a href="/blogs/blog_02">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+      <a href="/blogs/blog_02_amz_trial">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
     </div>
   </div>
 </div> -->
@@ -61,13 +61,13 @@
 	<div class="image">
 		<span>Apr.25</span>
 		<!-- <a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a> -->
-    <a href="/blogs/blog_01"><img src="https://i.pinimg.com/originals/61/ac/76/61ac763c33e048ee87f27e16da8db9fe.png" alt="Amazon Prime"></a>
+    <a href="/blogs/blog_01_amz_prime"><img src="https://i.pinimg.com/originals/61/ac/76/61ac763c33e048ee87f27e16da8db9fe.png" alt="Amazon Prime"></a>
 	</div>
 	<div class="inner">
-		<h3><a href="/blogs/blog_01">"All About The Amazon Prime"</a></h3>
+		<h3><a href="/blogs/blog_01_amz_prime">"All About The Amazon Prime"</a></h3>
 		<p>Amazon Prime is a paid subscription service($119 per year currently, plus a free 30-day trial or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
 		<div class="more_btn">
-			<a href="/blogs/blog_01">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+			<a href="/blogs/blog_01_amz_prime">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
 		</div>
 	</div>
 </div>
