--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -67,7 +67,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes We've Picked On Amazon Jul. 08. 2019.</h2>
+          <h2>Promotion Codes We've Picked On Amazon Jul. 09. 2019.</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -83,12 +83,12 @@
             <%= render 'shared/amz_search' %>
 
             <div id="movie-card-list">
-              <div class="movie-card" data-movie="Blade Runner">
+              <div class="movie-card" data-section="deals">
                 <div class="movie-card__overlay"></div>                
                 <div class="movie-card__content">
                   <div class="movie-card__header">
                     <h1 class="movie-card__title">Amazon Prime Day 2019</h1>
-                    <!-- <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4> -->
+                    <a href="/blogs/blog_01_amz_prime"><h4 class="movie-card__info">What's Prime?</h4></a>
                   </div>
                   <p class="movie-card__desc">Prime Day 2019 is a two-day parade of epic deals, starting July 15 at 12am through July 16. Prime Day is an annual celebration with awesome deals and exciting product launches, plus live entertainment and more, exclusively for Prime members.  &emsp;- Amazon.com -</p>
                   <a target="_blank" class="try_prime" href="https://amzn.to/2YcWjd1">"Try Free 30-day Trial"</a>
@@ -100,7 +100,7 @@
 
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_02">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_03">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
