--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -4,92 +4,46 @@
   
     <div class="cu_sub_nav">
       <ul class="clearfix">
-        <li><a href="/recommends/">Featured</a></li>
-        <li><a class="active" href="/guides/index">Gift Guide</a></li>
-        <li><a href="/editors/index">Editor's Pick</a></li>
+        <li><a href="/recommends">Editor's Pick Top 10</a></li>
+        <li><a  class="active" href="/guides/index">Gift Guide</a></li>
+        <!-- <li><a href="/editors/index">Editor's Pick</a></li> -->
+        <!-- <li><a href="/blogs/index">Blog</a></li> -->
       </ul>
     </div>
 
     <div class="promotions common_layout clearfix">
    
-      <%= render 'guides/navbar' %>      
+      <!-- < render 'guides/navbar' > -->
       <div class="filter-group guide_wrap">
 
-        <div class="filter-node promotion_box" data-filter='["him"," Amazon | Saless & Coupons, May 2019"]'>
-          <!-- <div class="image_box">
-            <img src="https://images.unsplash.com/photo-1555421689-491a97ff2040?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-          </div> -->
+        <!-- <div class="filter-node promotion_box" data-filter='["Categories","Products_Title"]'>
+          <div class="image_box"><a href="/guides/Guide_Link"><img src="Image_URL" alt=""></a></div>
           <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Amazon | Saless & Coupons, May 2019</a></h2>
-            <div class="gift_category">for him</div>
-            <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
-            <span>Last Updated: Jun. 15th. 2019</span>
+            <h2><a href="/guides/Guide_Link">Products_Title</a></h2>
+            <span>Last Updated: Mon. Day. 2019</span>
           </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
+          <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
+        </div> -->
+
+        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about BATMAN!"]'>
+          <div class="image_box"><a href="/guides/guide_02"><img src="https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="batman"></a></div>
+          <div class="node-box inner">
+            <h2><a href="/guides/guide_02">Gift for people who are CRAZY about BATMAN!</a></h2>
+            <span>Last Updated: Jul. 09. 2019</span>
           </div>
+          <div class="btn"><a href="/guides/guide_02">Read More</a></div>
         </div>
 
-        <div class="filter-node promotion_box" data-filter='["her"," Take $25 off your first AmazonFresh order of $100 or more."]'>
-          <div class="image_box">
-            <img src="https://images.unsplash.com/photo-1555421689-491a97ff2040?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-          </div>
+        <div class="filter-node promotion_box" data-filter='["color","Gift for people who are crazy about PINK!"]'>
+          <div class="image_box"><a href="/guides/guide_01"><img src="https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pink"></a></div>
           <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Take $25 off your first AmazonFresh order of $100 or more.</a></h2>
-            <div class="gift_category">for him</div>
-            <span>Last Updated: Jun. 15th. 2019</span>
+            <h2><a href="/guides/guide_01">Gift for people who are CRAZY about PINK!</a></h2>
+            <span>Last Updated: Jul. 09. 2019</span>
           </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
-          </div>
+          <div class="btn"><a href="/guides/guide_01">Read More</a></div>
         </div>
 
-        <div class="filter-node promotion_box" data-filter='["dad"," Up to 30% off | Amazon Elements"]'>
-          <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Up to 30% off | Amazon Elements</a></h2>
-            <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
-            <span>Last Updated: Jun. 15th. 2019</span>
-          </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
-          </div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["mom"," Up to 50% off Electronics Clippable Coupons"]'>
-          <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Up to 50% off Electronics Clippable Coupons</a></h2>
-            <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
-            <span>Last Updated: Jun. 15th. 2019</span>
-          </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
-          </div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["friend"," Up to 15% & FREE Shipping | Subscribe & Save"]'>
-          <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Up to 15% & FREE Shipping | Subscribe & Save</a></h2>
-            <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
-            <span>Last Updated: Jun. 15th. 2019</span>
-          </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
-          </div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["him"," Amazon | Up to 20% Off Subscribe & Save"]'>
-          <div class="image_box">
-            <img src="https://images.unsplash.com/photo-1555421689-491a97ff2040?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-          </div>
-          <div class="node-box inner">
-            <h2><a href="/guides/gift_guide_01">Amazon | Up to 20% Off Subscribe & Save</a></h2>
-           
-            <span>Last Updated: Jun. 15th. 2019</span>
-          </div>
-          <div class="btn">
-            <a href="#n">Read More</a>
-          </div>
-        </div>
+      
       </div><!--./guide_wrap-->
       
 
