--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -221,6 +221,8 @@
 /* For .gift_guide_show */
 .guide_header{width:1000px;margin:120px auto 50px auto;font-family:'Montserrat', sans-serif;}
 .guide_header h2{font-size:35px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
+.guide_header h2.pink{color:pink;}
+.guide_show_header{width:1000px;margin:100px auto 0 auto;}
 .guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:auto;}
 .shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
@@ -276,6 +278,8 @@
   .shoes_wrap{margin-top:50px;}
   .guide_header{margin:80px 0 20px 0;}
   .guide_header h2{font-size:25px;width:100%;}
+  .guide_show_header{width:100%;}
+  .guide_show{width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
   .guide_show .column_box .last_box{border:none;}
   .guide_show .column{width:48%;border:none;padding:0;margin:1%;box-shadow:0 4px 11px 0 rgba(221,221,221,.5);}
@@ -295,13 +299,16 @@
 @media screen and (min-width:641px) and (max-width:1199px){
  .guide_header{margin:80px 0 30px 0;}
  .guide_header h2{font-size:40px;width:60%;}
- .guide_show .column{float:left;width:31%;border:1px solid #ccc;}
+ .guide_show_header{width:100%;}
+ .guide_show{width:100%;}
+ .guide_show .column{float:left;width:33.3333%;border:1px solid #ccc;}
  .guide_show .column:hover{box-shadow:0,0,0;}
  .guide_show .column img{height:250px;}
  .guide_show .shoes_column{width:25%;margin:0;}
  .guide_show .shoes_column img{height:200px;}
  .guide_show .close{right:-40px;}
  .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
+ .guide_show .slides .inner_wrap .inner .btn a{padding:10px 15px;}
 }
 
 /* Begin Editor's Pick Main Page */
@@ -548,7 +555,8 @@
 @media screen and (max-width: 600px) {
   .movie-card {background-position: 50% 0%;background-size: cover;height: 400px;}
 }
-.movie-card[data-movie="Blade Runner"]{background-image: url(https://images.unsplash.com/photo-1561132680-1c6abcf10a81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
+.movie-card[data-section="deals"]{background-image:url(https://images.unsplash.com/photo-1561132680-1c6abcf10a81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
+.movie-card[data-section="batman"]{background-image:url(https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
 .movie-card__overlay {width: 100%;height: 100%;border-radius: 8px;background: linear-gradient(to right, rgba(42, 159, 255, 0.2) 0%, #212120 45%, #212120 100%);background-blend-mode: multiply;position: absolute;top: 0;bottom: 0;right: 0;left: 0;}
 @media screen and (max-width: 600px) {
   .movie-card__overlay {
@@ -564,8 +572,8 @@
   .movie-card__content {margin-top: 1em;width: 100%;float: inherit;max-width: 100%;padding: 0 1em 1em;}
 }
 .movie-card__header{margin-bottom: 0;}
-.movie-card__title {color:#fff;margin:-5px 0 10px 0;}
-.movie-card__info {text-transform: uppercase;letter-spacing: 2px;font-size: .8em;color: #2a9fff;line-height: 1;margin: 0;font-weight: 700;opacity: .5;}
+.movie-card__title {color:#fff;margin-top:-10px;}
+.movie-card__info{text-transform:uppercase;letter-spacing:2px;font-size:13px;color:#2a9fff;line-height:1;margin:0;font-weight:700;margin-top:-10px;}
 .movie-card__desc {font-weight: 300;color:#fff;}
 .movie-card__content .btn{padding: .5rem 2rem;/*background-color: rgba(255, 255, 255, 0.4);*/color: white;}
 .btn-outline{background-color: transparent;border: 3px solid #ffffff;}
@@ -576,7 +584,8 @@
   .movie-card[data-movie="Blade Runner"]{margin-bottom:60px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .movie-card__content a{font-size:15px;margin:7px 0;}
-  .movie-card__title {margin:-10px 0 3px 0;}
+  .movie-card__content a{font-size:15px;margin:3px 0;}
+  .movie-card__info{font-size:10px;}
+  .movie-card__content .btn{padding:3px 10px;}
 }
 
