--- a/app/views/blogs/blog_01_amz_prime.html.erb
+++ b/app/views/blogs/blog_01_amz_prime.html.erb
@@ -7,7 +7,7 @@
 
         <div class="blog_tit">
           <h2><span>All About The Amazon Prime</span></h2>
-          <address>April. 25. 2019.</address><em>by Oh,i gotta buy this</em>
+          <!-- <address>April. 25. 2019.</address> --><em>by Oh,i gotta buy this</em>
           <p><a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">Amazon Prime</span></a> is a paid subscription service($119 per year currently, plus a <a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">free 30-day trial</span></a> or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
