--- a/app/views/deals/amz_prime.html.erb
+++ b/app/views/deals/amz_prime.html.erb
@@ -6,40 +6,7 @@
   <div class="codes common_layout">
     
       <div class="lt_cnt">
-        <h2>Daily Deals of Amazon</h2>
-        
-       <div class="toggle">
-          <ul>
-            <li>
-              <a href="#n">NOTES</a>
-              <ul>
-                <li>Deals & pricing may change or expire at anytime.</li>
-                <li>Free Shipping: Prime or $25+ of all other eligible items.<a target="_blank" href="/blogs/blog_01">(What's PRIME?)</a></li>
-                <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
-                <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
-                <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
-              </ul>
-            </li>
-            <!-- <li>
-              <a href="#n">NONE</a>
-              <ul>
-                <li></li>
-              </ul>
-            </li> -->
-            <li class="last7days bestdeals">
-              <a href="#n">LAST 7 DAYS DAILY DEALS</a>
-              <ul>
-                <%= render 'shared/bestdeals_days' %>
-              </ul>
-            </li>
-          </ul>
-        </div><!--./toggle-->
-        <div class="last7days_pc bestdeals">
-          <p>LAST 7 DAYS DAILY DEALS</p>
-          <ul>
-            <%= render 'shared/bestdeals_days' %>
-          </ul>
-        </div>
+        <h2>Amazon Prime Day 2019</h2>
         
         <div class="lt_sort_box clearfix">
           <ul class="clearfix">
@@ -54,7 +21,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals We've Picked On Amazon Jul. 09. 2019.</h2>
+        <h2>Amazon Prime Day Deals</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -71,7 +38,7 @@
           <%= render 'shared/amz_search' %>
 
             <div id="movie-card-list">
-              <div class="movie-card" data-section="deals">
+              <div class="movie-card" data-movie="Blade Runner">
                 <div class="movie-card__overlay"></div>                
                 <div class="movie-card__content">
                   <div class="movie-card__header">
@@ -86,9 +53,9 @@
               </div>
             </div>
 
-          <%= render 'deals/body_bestdeals' %>
+          <%= render 'deals/body_amz_prime' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_06">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best prime deals from Amazon.com... :D 
         
         
       </div><!--./rt_cnt-->    
