--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,48 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="40" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JwBD9R"><img src="https://m.media-amazon.com/images/I/61SxzXGRhpL._SR400,400_.jpg" alt="Rii RKM709 2.4Ghz Ultra-Slim Wireless Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>116 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JwBD9R">Rii RKM709 2.4Ghz Ultra-Slim Wireless Keyboard and Mouse Combo Multimedia Compact Keyboard and Mouse for PC Laptop,Desktop,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.99</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $14.99</strong> with promo code: <strong>40VPMQOR</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JwBD9R">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="22.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Lcc9Cc"><img src="https://m.media-amazon.com/images/I/71dO1Bp9poL._SR400,400_.jpg" alt="iClever Bluetooth Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>20 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Lcc9Cc">iClever Bluetooth Keyboard - Rechargeable Multi-Device Wireless Keyboard with Aluminium Alloy Housing and Phone Holder,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.49</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>25% off at $29.99</strong> with promo code: <strong>25F8KXEW</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Lcc9Cc">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="68" data-price="8.32">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LIIX4X"><img src="https://m.media-amazon.com/images/I/61X0NSDCm9L._SR400,400_.jpg" alt="Portable Mini Desk Fans" /></a>
